--- a/luci-app-openlist/Makefile
+++ b/luci-app-openlist/Makefile
@@ -15,3 +15,4 @@ LUCI_DEPENDS:=+openlist
 include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
+$(eval $(call BuildPackage,$(PKG_NAME)))
